Completed refactoring my entire game. Finally starting to get it

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
             <div id="controls" class="container show">
                 <div class="row">
-                    <button id="reset" class="btn btn-danger-outline reset-button center-block" type="reset" value="Reset" onclick="resetThis();">RESET</button>
+                    <button id="reset" class="btn btn-danger-outline reset-button center-block" type="reset" value="Reset">RESET</button>
                 </div>
             </div>
         </div>
